--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.17.2",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "express-sanitizer": "^1.0.2",
     "method-override": "^2.3.9",
     "mongoose": "^4.10.8"
   }
